@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class CreateVehicleUI{
}

class CreateVehicleController {
    + createVehicleController(employeeRepository, AuthenticationRepository)
    + createVehicle(vehicleId)
}


' --------------------------------------------
'             REPOSITORIOS
' --------------------------------------------

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getEmployeeRepository()
    + getAuthenticationRepository()
}

class EmployeeRepository {
    + getEmployeeByUserEmail(email)
}



class AuthenticationRepository
{
    + getCurrentUserSession()
}


' --------------------------------------------
'             CLASSES "FINAIS" & DOMAIN
' --------------------------------------------

class Employee {
    - String name
    - String vatNumber
    - String phone
    - String email
    - Address postalAddress
    - addVehicle(vehicle)
    - validateVehicle(vehicle)
    + Employee(name, vatNumber, webSite, phone, email, postalAddress)
    + createVehicle(vehicle)
'    - getUserByEmail(email)
}




class UserSession
{
    + isLoggedInWithRole()
    + getUserId()
}

class Vehicle {
    - plateID: String
    - brand: String
    - model: String
    - plateID: String
    - type: String
    - tare: int
    - grossWeight: int
    - current km: int
    - register Date: String
    - acquisition Date: String
    - checkUpFrequencyInKms: int
'    + createVehicle ()

}




' --------------------------------------------
'             LIGAÇÕES
' --------------------------------------------

'Create Vehicle UI
CreateVehicleUI -r..> CreateVehicleController

'Create Vehicle Controller
CreateVehicleController -r---.> Repositories :repositories
'CreateVehicleController ----.>Vehicle
'CreateVehicleController -> VehicleRepository

'REPOSITORIES


Repositories -r-> Repositories : instance
Repositories -d-> "1" EmployeeRepository
Repositories -u-> "1" AuthenticationRepository
EmployeeRepository -> Employee : employees
AuthenticationRepository -> UserSession : usersession
Employee "1" -> "*" Vehicle  : identify

' --------------------------------------------------
'   Descomentar para adicionar "VehicleRepository"
' --------------------------------------------------


'VehicleRepository -> Employee
'Repositories -r-> "1" VehicleRepository
'class VehicleRepository {
'    - vehicles: List<Vehicle>
'    + getVehicleByIdPlate(plateId): Vehicle
'}

' -------------------------------------------------



'Organization -- VehicleRepository
@enduml
